@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-368: HBase Vertex I/O formats handle setConf() internally (bfem via ereisman)
+
   GIRAPH-367: Expose WorkerInfo to clients (Nitay Joffe via ereisman)
 
   GIRAPH-370: AccumuloVertexOutputFormat public visibility for
